<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Fluent UI Demo</string>
    <string name="app_title">Fluent UI</string>
    <string name="app_accessibility_selected">Selected %s</string>
    <string name="app_modifiable_parameters">Modifiable Parameters</string>
    <string name="app_right_accessory_view">Right Accessory View</string>
    <string name="app_style">Style</string>
    <string name="app_icon_pressed">Icon Pressed</string>
    <string name="actionbar_start_button">Start Demo</string>
    <string name="actionbar_carousel_radio_label">Carousel</string>
    <string name="actionbar_icon_radio_label">Icon</string>
    <string name="actionbar_basic_radio_label">Basic</string>
    <string name="actionbar_position_bottom_radio_label">Bottom</string>
    <string name="actionbar_position_top_radio_label">Top</string>
    <string name="actionbar_type_heading">ActionBar Type</string>
    <string name="actionbar_position_heading">ActionBar Position</string>
    <string name="app_bar_style">AppBar Style</string>
    <string name="app_bar_subtitle">Subtitle</string>
    <string name="app_bar_bottom_border">Bottom Border</string>
    <string name="app_bar_layout_navigation_icon_clicked">Navigation icon clicked.</string>
    <string name="center_title_alignment">Center align app bar</string>
    <string name="app_bar_size">App Bar size</string>
    <string name="left_logo">Left Logo</string>
    <string name="navigation_icon">Navigation Icon</string>
    <string name="enable_tooltips">Enable Tooltips</string>
    <string name="app_bar_layout_menu_flag">Flag</string>
    <string name="app_bar_layout_menu_settings">Settings</string>
    <string name="app_bar_layout_menu_search">Search</string>
    <string name="app_bar_layout_toggle_scroll_behavior_sub_header">Scroll behavior: %s</string>
    <string name="app_bar_layout_toggle_scroll_behavior_button">Toggle scroll behavior</string>
    <string name="app_bar_layout_toggle_navigation_icon_sub_header">Toggle navigation icon</string>
    <string name="app_bar_layout_show_avatar_button">Show avatar</string>
    <string name="app_bar_layout_show_back_icon_button">Show back icon</string>
    <string name="app_bar_layout_hide_icon_button">Hide icon</string>
    <string name="app_bar_layout_show_icon_button">Show icon</string>
    <string name="app_bar_layout_toggle_searchbar_sub_header">Toggle searchbar layout style</string>
    <string name="app_bar_layout_searchbar_accessory_view_button">Show as accessory view</string>
    <string name="app_bar_layout_searchbar_action_view_button">Show as action view</string>
    <string name="app_bar_layout_toggle_theme_sub_header">Toggle between themes (recreates activity)</string>
    <string name="app_bar_layout_toggle_theme_button">Toggle theme</string>
    <string name="app_bar_layout_list_item">Item</string>
    <string name="app_bar_layout_list_sub_header">Extra scrollable content</string>
    <string name="avatar_style_circle">Circle style</string>
    <string name="avatar_style_square">Square style</string>
    <string name="avatar_size_xxlarge">XXLarge</string>
    <string name="avatar_size_xlarge">XLarge</string>
    <string name="avatar_size_large">Large</string>
    <string name="avatar_size_medium">Medium</string>
    <string name="avatar_size_small">Small</string>
    <string name="avatar_size_xsmall">XSmall</string>
    <string name="avatar_size_xxlarge_accessibility">Double Extra Large</string>
    <string name="avatar_size_xlarge_accessibility">Extra Large</string>
    <string name="avatar_size_xsmall_accessibility">Extra Small</string>
    <string name="avatar_group_max_displayed_avatar">Max Displayed Avatar</string>
    <string name="avatar_group_overflow_avatar_count">Overflow Avatar Count</string>
    <string name="avatar_group_border_type">Border Type</string>
    <string name="avatar_group_info">Avatar Group with OverflowAvatarCount set will not adhere to max Displayed Avatar.</string>
    <string name="avatar_group_face_stack">Face Stack</string>
    <string name="avatar_group_face_pile">Face Pile</string>
    <string name="avatar_group_overflow_clicked">Overflow clicked</string>
    <string name="avatar_group_avatar_clicked">AvatarView at index %d clicked</string>
    <string name="badge_notification_badge">Notification Badge</string>
    <string name="badge_notification_dot">Dot</string>
    <string name="badge_notification_list">List</string>
    <string name="badge_notification_character">Character</string>
    <string name="bottom_navigation_menu_item_photos">Photos</string>
    <string name="bottom_navigation_menu_item_news">News</string>
    <string name="bottom_navigation_menu_item_alerts">Alerts</string>
    <string name="bottom_navigation_menu_item_calendar">Calendar</string>
    <string name="bottom_navigation_menu_item_team">Team</string>
    <string name="bottom_navigation_toggle_labels_button">Toggle labels</string>
    <string name="bottom_navigation_three_menu_items_button">Show three menu items</string>
    <string name="bottom_navigation_four_menu_items_button">Show four menu items</string>
    <string name="bottom_navigation_five_menu_items_button">Show five menu items</string>
    <string name="bottom_navigation_accessibility_labels_state">Labels are %s</string>
    <string name="bottom_sheet">BottomSheet</string>
    <string name="bottom_sheet_dialog">BottomSheetDialog</string>
    <string name="bottom_sheet_with_single_line_items">Show with single line items</string>
    <string name="bottom_sheet_with_double_line_items">Show with double line items</string>
    <string name="bottom_sheet_with_single_line_header">Show with single line header</string>
    <string name="bottom_sheet_with_double_line_title_and_dividers">Show with double line header and dividers</string>
    <string name="bottom_sheet_dialog_button">Show</string>
    <string name="drawer_content_desc_collapse_state">Expand</string>
    <string name="drawer_content_desc_expand_state">Minimize</string>
    <string name="date_time_picker_title">DateTimePicker</string>
    <string name="date_time_picker_single_date_title">Single Date</string>
    <string name="date_time_picker_date_picked_default">No date picked</string>
    <string name="date_time_picker_date_button">Show date picker</string>
    <string name="date_time_picker_calendar_date_time_button">Show date time picker with date tab selected</string>
    <string name="date_time_picker_date_time_calendar_button">Show date time picker with time tab selected</string>
    <string name="date_time_picker_date_range_title">Date Range</string>
    <string name="date_time_picker_date_range_start_title">Start:</string>
    <string name="date_time_picker_date_range_end_title">End:</string>
    <string name="date_time_picker_date_start_picked_default">No start picked</string>
    <string name="date_time_picker_date_end_picked_default">No end picked</string>
    <string name="date_time_picker_date_start_button">Select start date</string>
    <string name="date_time_picker_date_end_button">Select end date</string>
    <string name="date_time_picker_date_time_range_button">Select date time range</string>
    <string name="date_time_picker_dialog_title">DateTimePickerDialog</string>
    <string name="date_time_picker_dialog_button">Show Dialog</string>
    <string name="drawer_button">Show drawer</string>
    <string name="drawer_dialog_button">Show drawer dialog</string>
    <string name="no_fade_bottom_dialog_button">No fade bottom dialog</string>
    <string name="drawer_top_dialog_button">Show top drawer</string>
    <string name="no_fade_top_dialog_button">No fade top dialog</string>
    <string name="anchor_view_top_dialog_button"> Show anchor view top dialog</string>
    <string name="no_title_top_dialog_button"> Show no title top dialog</string>
    <string name="below_title_top_dialog_button"> Show below title top dialog</string>
    <string name="drawer_right_dialog_button">Show right drawer</string>
    <string name="drawer_left_dialog_button">Show left drawer</string>
    <string name="persona_email_cecil_folk">cfolk@microsoft.com</string>
    <string name="persona_email_mauricio_august">maugust@microsoft.com</string>
    <string name="persona_email_mona_kane">mkane@microsoft.com</string>
    <string name="persona_name_cecil_folk">Cecil Folk</string>
    <string name="persona_name_mauricio_august">Mauricio August</string>
    <string name="persona_name_mona_kane">Mona Kane</string>
    <string name="persona_chip_example_disabled">Disabled Persona Chip</string>
    <string name="persona_chip_example_error">Error Persona Chip</string>
    <string name="persona_chip_example_no_icon">Persona Chip with no close icon</string>
    <string name="persona_chip_example_basic">Basic Persona Chip</string>
    <string name="tab_standard_two_segment">Standard Tab 2-Segment</string>
    <string name="tab_standard_three_segment">Standard Tab 3-Segment</string>
    <string name="tab_standard_four_segment">Standard Tab 4-Segment</string>
    <string name="tab_standard_with_pager">Standard Tab with Pager</string>
    <string name="tab_switch">Switch Tab</string>
    <string name="tab_pills">Pills Tab </string>
    <string name="headline">Headline is Light 28sp</string>
    <string name="title_1">Title 1 is Medium 20sp</string>
    <string name="title_2">Title 2 is Regular 20sp</string>
    <string name="heading">Heading is Regular 18sp</string>
    <string name="subheading_1">Subheading 1 is Regular 16sp</string>
    <string name="subheading_2">Subheading 2 is Medium 16sp</string>
    <string name="body_1">Body 1 is Regular 14sp</string>
    <string name="body_2">Body 2 is Medium 14sp</string>
    <string name="caption">Caption is Regular 12sp</string>
</resources>